Published PS#5, EGR 304

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/27/2020 8:41 pm)
+                              >(Last update: 1/31/2020 9:19 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -80,6 +80,75 @@ DO {
    <!-- Assignment -->
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 5
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        1/31
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        2/07
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;
+		
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+		Topics: Digital-to-analog converson, actuators <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
+		        solenoids, motors                      <br>&nbsp;
+		Scan through Chapters 2 and 3 of <a href=
+		"http://www.analog.com/en/education/education-library/data-conversion-handbook.html"
+		><i>The Data </i></a><br>&nbsp;
+        <a href=
+		"http://www.analog.com/en/education/education-library/data-conversion-handbook.html"
+		><i>Conversion Handbook, 2005</i></a> ed. Walt Kester.<br>&nbsp;
+		                                                      <br>&nbsp;
+		 Read: Freescale's tutorials on motors.         <br>&nbsp;
+		<a href=
+		"http://www.nxp.com/files/microcontrollers/doc/train_ref_material/MOTORDCTUT.html"
+		>DC Motors</a>                                  <br>&nbsp;
+		<a href=
+		"http://www.nxp.com/assets/documents/data/en/supporting-information/MOTORBLDCTUT.html"
+		>Brushless DC Motors</a>                        <br>&nbsp;
+		<a href=
+		"http://www.nxp.com/assets/documents/data/en/supporting-information/MOTORSTEPTUT.html"
+		>Stepper Motors</a>                             <br>&nbsp;
+		<a href=
+		"http://www.nxp.com/assets/documents/data/en/supporting-information/MOTORSRTUT.html"
+		>Switched Reluctance Motors</a>                 <br>&nbsp;
+		<a href=
+		"http://www.nxp.com/assets/documents/data/en/supporting-information/MOTORBLACTUT.html"
+		>Brushless AC Motors</a>                        <br>&nbsp;<small>
+        (Now hosted by NXP, which bought out Freescale.)</small><br>&nbsp;
+		A few caveats about the above tutorials. . .   <br>&nbsp;
+		In the illustration of the "Switched Reluctance"<br>&nbsp;
+		motor, the rotor will assume an induced        <br>&nbsp;
+        magnetic field to oppose the applied magnetic  <br>&nbsp;
+        field.  This is not illustrated, probably      <br>&nbsp;
+        because it might imply that the rotor is       <br>&nbsp;
+        permanently magnetized, which it is not.  It is<br>&nbsp;
+        just iron (or a steel alloy).                  <br>&nbsp;
+        In the illustration of the "AC Induction Motor"<br>&nbsp;
+        the coloration of the induced magnetic field   <br>&nbsp;
+        in the rotor is backwards.  According to Lens' <br>&nbsp;
+        Law, the induced field will oppose the applied <br>&nbsp;
+        magnetic field from the stator.  Thus the red  <br>&nbsp;
+        (north) pole of the stator will face a green   <br>&nbsp;
+        (south) pole on the rotor, just as in any other<br>&nbsp;
+        motor.                                         <br>&nbsp;
+                                                       <br>&nbsp;
+        Also read <a href=
+        "http://homepage.cs.uiowa.edu/~jones/step/"
+                 >Jones on Stepping Motors</a>         <br>&nbsp;
+                                                       <br>&nbsp;
+        <DO>Do these </DO><a href=
+        "https://dordt.instructure.com/files/104537713/download?download_frd=1"
+                >problems on motors</a>                <br>&nbsp;
+        Helpful link:  Lin model <a href=
+        "http://www.linengineering.com/products/stepper-motors/211-series/211-13-01/"
+                                >211-13-01</a> and note<br>&nbsp;
+        the "Torque Curves" tab. 
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
