Published EGR 304 slides from Monday, fixed a link to PS#5

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -141,15 +141,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->A/D conversion: anti-aliasing, sampling, quantizing, audio demo<!--end comment--></td>  
    </TR><!-- Week of 2/03------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/163513118/download?download_frd=1"><!-- -->
 	  2/03<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/05<!-- --></a><!-- --><br><!-- --<a href=
+      2/05<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/07<!-- --></a><!-- --></td>
+      2/07<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Sensors: an overview.  Matching sensor range to A/D range.<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/10------------------------------------------------------------------ --><TR>
