--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/01/2020 11:05 pm)
+                              >(Last update: 2/04/2020 6:50 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -143,7 +143,7 @@ DO {
                  >Jones on Stepping Motors</a>         <br>&nbsp;
                                                        <br>&nbsp;
         <DO>Do these </DO><a href=
-        "https://dordt.instructure.com/files/104537713/download?download_frd=1"
+        "304_MOTORS_PS.docx"
                 >problems on motors</a>                <br>&nbsp;
         Helpful link:  Lin model <a href=
         "http://www.linengineering.com/products/stepper-motors/211-series/211-13-01/"
