EGR 304 published daily slides, delayed PS#5 due date to 2/14.

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -143,14 +143,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/163513118/download?download_frd=1"><!-- -->
-	  2/03<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/05<!-- --</a><!-- --><br><!-- --<a href=
+	  2/03<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/163669696/download?download_frd=1"><!-- -->
+      2/05<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/07<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Sensors: an overview.  Matching sensor range to A/D range.<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Devotion: "What, me worry?", Intro motors, DC motors, Intro AC motors<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/10------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
