--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/04/2020 6:50 pm)
+                              >(Last update: 2/07/2020 9:33 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -89,7 +89,7 @@ DO {
         1/31
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        2/07
+        2/14
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;
@@ -148,7 +148,10 @@ DO {
         Helpful link:  Lin model <a href=
         "http://www.linengineering.com/products/stepper-motors/211-series/211-13-01/"
                                 >211-13-01</a> and note<br>&nbsp;
-        the "Torque Curves" tab. 
+        the "Torque Curves" tab.                       <br>&nbsp;
+                                                       <br>&nbsp;<small>
+        (On 2/05 the due date on this assignment was changed     <br>&nbsp;
+        from 2/07 to 2/14.)  		
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
