Published EGR 304 daily slides

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -144,7 +144,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/163513118/download?download_frd=1"><!-- -->
 	  2/03<!-- --></a><!-- --><br><!-- --><a href=
-      "https://dordt.instructure.com/files/163669696/download?download_frd=1"><!-- -->
+      "https://dordt.instructure.com/files/163981581/download?download_frd=1"><!-- -->
       2/05<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/163763029/download?download_frd=1"><!-- -->
       2/07<!-- --></a><!-- --></td>
@@ -154,15 +154,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->3-phase sychronous w/ salient pole or cylindrical rotor, Selsyn motors<!--end comment--></td>  
    </TR><!-- Week of 2/10------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  2/10<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/163983224/download?download_frd=1"><!-- -->
+	  2/10<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/12<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/14<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Stepper motors, DC motor example<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/17------------------------------------------------------------------ --><TR>
@@ -176,7 +176,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       2/21<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><font color="grey">Test #1</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/24------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -267,7 +267,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       4/10<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><font color="grey">Test #2</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color="grey">No class--Easter Break</font><!--end comment--></td>  
    </TR><!-- Week of 4/13------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
