--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/07/2020 9:33 pm)
+                              >(Last update: 2/12/2020 9:14 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -164,7 +164,9 @@ DO {
         1/31
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;
+        <a href=
+		https://dordt.instructure.com/files/164083484/download?download_frd=1"
+		>2/12</a>
 		
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics: Driving powerful loads, switch debouncing<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
