EGR 304 Daily slides posted

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -99,7 +99,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Intro, Microprocessor vs. Microcontroler vs SoC, trends <font color="grey">(First day of class)</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Intro, Microprocessor vs. Microcontroller vs SoC, trends <font color="grey">(First day of class)</font><!--end comment--></td>  
    </TR><!-- Week of 1/13------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
@@ -151,19 +151,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Sensors: an overview.  Matching sensor range to A/D range.<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Devotion: "What, me worry?", Intro motors, DC motors, Intro AC motors<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->3-phase sychronous w/ salient pole or cylindrical rotor, Selsyn motors<!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->3-phase synchronous w/ salient pole or cylindrical rotor, Selsyn motors<!--end comment--></td>  
    </TR><!-- Week of 2/10------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/163983224/download?download_frd=1"><!-- -->
-	  2/10<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/12<!-- --</a><!-- --><br><!-- --<a href=
+	  2/10<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/164134024/download?download_frd=1"><!-- -->
+      2/12<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/14<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Stepper motors, DC motor example<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Stepper holding torque vs. running torque, shaded pole examples.<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/17------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -176,8 +176,8 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       2/21<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><font color="grey">Test #1</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Wednesday -->&nbsp;<!--start comment--><font color="grey"><strike>Test #1</strike></font><!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment--><font color="grey">Test #1</<!--end comment--></td>  
    </TR><!-- Week of 2/24------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
