EGR 304, corrected and updated slide #15 from 2/10 in EGR 304

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -155,7 +155,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 2/10------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "https://dordt.instructure.com/files/163983224/download?download_frd=1"><!-- -->
+	  "https://dordt.instructure.com/files/164135977/download?download_frd=1"><!-- -->
 	  2/10<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/164134024/download?download_frd=1"><!-- -->
       2/12<!-- --></a><!-- --><br><!-- --<a href=
@@ -241,7 +241,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       3/27<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><font color="grey">Lab Project I Report Due 11:59 PM</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/30------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -293,7 +293,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       4/24<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><font color="grey">Lab Project II Report Due 11:59 PM</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 4/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
