EGR 304 daily slides posted

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -158,13 +158,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/164135977/download?download_frd=1"><!-- -->
 	  2/10<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/164134024/download?download_frd=1"><!-- -->
-      2/12<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/14<!-- --</a><!-- --></td>
+      2/12<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/164225542/download?download_frd=1"><!-- -->
+      2/14<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Stepper motors, DC motor example<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Stepper holding torque vs. running torque, shaded pole examples.<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->H-Bridge, relative position, direction, grey code, V-scan, U-scan, Interrupts<!--end comment--></td>  
    </TR><!-- Week of 2/17------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
