Published EGR 304 PS#6

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/12/2020 9:14 am)
+                              >(Last update: 2/14/2020 7:07 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -81,6 +81,57 @@ DO {
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 6
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        2/14
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        2/28
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;
+		
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Position sensing, interrupts           <br>&nbsp;
+		Read:  Class notes on position sensing         <br>&nbsp;
+		including relative vs. absolute position,      <br>&nbsp;
+		issues with vibration, quadrature sensing,     <br>&nbsp;
+		V-scan and U-scan techniques.                  <br>&nbsp;
+		Also read Section 10.2 in <a href=
+		"https://ptolemy.berkeley.edu/books/leeseshia/"
+		>Lee and Seshia</a>                            <br>&nbsp;
+		Also read this <a href=
+        "http://www.best-microcontroller-projects.com/hardware-interrupt.html"
+                 >overview on interrupts</a>          <BR>&nbsp;
+        and this on <a href=
+        "http://playground.arduino.cc/Code/Interrupts"
+                  >Arduino interrupt programming</a>  <br>&nbsp;
+
+		                                               <br>&nbsp;
+		<DO>Do these</DO> <a href="304S20P06_ENC+INTER.RTF"
+		>problems on encoders and interrupts</a>.<br>&nbsp;
+                                                       <br>&nbsp;
+        Optional related information:                  <br>&nbsp;
+        Details on a particular <a href=
+        "http://www.arduino.cc/playground/Main/RotaryEncoders"
+                               >relative encoder</a>   <br>&nbsp;
+        Wikipedia article: "<a href=
+        "http://en.wikipedia.org/wiki/Rotary_encoder"
+                           >Rotary encoder</a>"        <br>&nbsp;
+        Detail of a <a href=
+        "304S20_RC_TRK.HTM"
+                >13-bit grey code absolute encoder</a>.<br>&nbsp;
+        Wikipedia on <a href=
+        "http://en.wikipedia.org/wiki/Single-track_Gray_code#Single-track_Gray_code"
+        >Single-track grey code</a>                    <br>&nbsp;
+		If you are a fan of the Raspberry Pi and/or    <br>&nbsp;
+		Multithreaded programming (a foundation for    <br>&nbsp;
+		object-oriented programming) you might like to <br>&nbsp;
+		look at Ch 11 in Lee and Seshia.   
+	<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
  5
