--- a/S20/304/304S20_RC_TRK.HTM
+++ b/S20/304/304S20_RC_TRK.HTM
@@ -37,7 +37,7 @@ Please read the caption below the photo.
        border="0">
                                              <TR><TD width="1135">
                                                <p align="center">
-<img src="Rotary_Encoder_track_detail.gif" heith="1124" width="1135" alt="Detail of rotary encoder track">  
+<img src="Rotary_Encoder_track_detail.gif" height="1124" width="1135" alt="Detail of rotary encoder track">  
 This is a thirteen-track absolute position grey-code encoder. <br>
 Thirteen bits of code gives resolution of (360 degrees)/(2<sup>13</sup>) = 0.044 degrees.<br>
 It is no wonder that the camera used to take this photograph did not have enough<br>
@@ -48,8 +48,9 @@ The "1 1111 1111 1111" code is between 8 and 9 o'clock. (Why not right next to t
 There is some damage to the track from disassembling the product.  The damage is near the bottom of the image.  
 <br>
 <br>This image is 1135 by 1124 pixels.  For a clear view you need to view it at full resolution.<br>
-Full resolution means the outer diameter of the body of this encoder is shown as about 9 or 10 inches across on most desktop and laptop screens.<br>
+Full resolution means the outer diameter of the body of this encoder is typically shown on-screen at about 9 or 10 inches across.<br>
 If your screen is not large enough to show a full 9 or 10 inches of diameter, zoom in and pan the image to view part of it at full resolution.<br>
+The link below to Wikimedia Commons will give you a full-color version of this photo.<br>
 <br>
 <br>
 <small>Image source: <a href=
