--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/14/2020 7:07 pm)
+                              >(Last update: 2/19/2020 11:45 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -143,7 +143,9 @@ DO {
         2/14
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;
+        <a href=
+		https://dordt.instructure.com/files/164454160/download?download_frd=1"
+		>2/19</a>
 		
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics: Digital-to-analog converson, actuators <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
