EGR  304 daily slides

--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -168,15 +168,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 2/17------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "https://dordt.instructure.com/files/164365361/download?download_frd=1"><!-- -->
-	  2/17<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/19<!-- --</a><!-- --><br><!-- --<a href=
+	  "https://dordt.instructure.com/files/164459601/download?download_frd=1"><!-- -->
+	  2/17<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/164459358/download?download_frd=1"><!-- -->
+      2/19<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/21<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Memory capabilies (stack) needed for interrupts, sources of interrupts<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><font color="grey"><strike>Test #1</strike></font><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Detail on timer system, advantages of interrupts, OOP, risks of OOP<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color="grey">Test #1</<!--end comment--></td>  
    </TR><!-- Week of 2/24------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
