--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -182,14 +182,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/164773821/download?download_frd=1"><!-- -->
-	  2/24<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/26<!-- --</a><!-- --><br><!-- --<a href=
+	  2/24<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/164962862/download?download_frd=1"><!-- -->
+      2/26<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/28<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Interrupt density, latency, interrupt intervals<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Int. intervals example; critical regions; task schdlg via-software-hardware<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/02------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
