Published hints for PS#6, EGR 304

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/19/2020 11:45 am)
+                              >(Last update: 2/27/2020 1:01 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -112,7 +112,9 @@ DO {
 
 		                                               <br>&nbsp;
 		<DO>Do these</DO> <a href="304S20P06_ENC+INTER.RTF"
-		>problems on encoders and interrupts</a>.<br>&nbsp;
+		>problems on encoders and interrupts</a>.      <br>&nbsp;
+		Hints on <a href="Hints3-19_Interrupts.pdf"
+		         >Problem 3.19</a>                     <br>&nbsp;
                                                        <br>&nbsp;
         Optional related information:                  <br>&nbsp;
         Details on a particular <a href=
