Published PS#7 for EGR 304

--- a/S20/304/304S20PS.HTM
+++ b/S20/304/304S20PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/27/2020 1:01 am)
+                              >(Last update: 2/28/2020 1:01 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -80,6 +80,70 @@ DO {
    <!-- Assignment -->
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 7
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        2/28
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        3/20
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;
+		
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Task scheduling, Measuring freq, period<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
+		        Memory, AC load control, Serial        <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+				interfacing and RS-232, Ethernet       <br>&nbsp;
+				                                       <br>&nbsp;
+        Read <a href="http://en.wikipedia.org/wiki/RS-232"
+            >RS-232</a> in Wikipedia                   <BR>&nbsp;
+                                                       <br>&nbsp;
+        Do this problem:                               <br>&nbsp;
+        Plot voltage vs. time of the Tx line in RS-232 <br>&nbsp;
+        for sending this text: "Z#" (without the       <br>&nbsp;
+        quotation marks, with a capital "Z").  Assume  <br>&nbsp;
+        &plusmn;12 V signal voltages, 53 kbaud, eight data 
+                                                       <br>&nbsp;
+        bits, and one stop bit.  Be sure to label your <br>&nbsp;
+        axes properly.  An ASCII table can be found in <br>&nbsp;
+        many places, e.g. <a href="http://www.asciitable.com"
+                         >http://www.asciitable.com</a><br>&nbsp;
+        Note that the illustration in the Wikipedia    <br>&nbsp;
+        reading does not have properly labeled axes.   <br>&nbsp;
+        Specifically the the independent axis lacks    <br>&nbsp;
+        scale and units.                               <br>&nbsp;
+                                                       <br>&nbsp;
+        Optional:  The entire RS-232 standard is       <br>&nbsp;
+        available from Dordt's library.  <i>Interface  <br>&nbsp;
+        Between Data Terminal Equipment And Data       <br>&nbsp;
+        Circuit-Terminating Equipment Employing Serial <br>&nbsp;
+        Binary Data Interchange</i> TK7887.5 .I57 1997 <br>&nbsp;
+                                                       <br>&nbsp;
+        Optional:  Read about <a href=
+        "http://en.wikipedia.org/wiki/Teleprinter"
+                              >teleprinters</a>.       <br>&nbsp;
+                                                       <br>&nbsp;
+        Very Optional:  Listen to a <a href=
+        "http://www.npr.org/templates/story/story.php?storyId=10554017"
+                              >Teletype machine</a>.   <br>&nbsp;
+        And see a <a href=
+        "http://www.youtube.com/watch?feature=player_detailpage&v=2B-U-5ylvWo"
+            >Teletype machine</a> connected to a       <br>&nbsp;
+        Digital Equipment Corporation (DEC, a brand)   <br>&nbsp;
+        model PDP-8/e computer.  This computer could be<br>&nbsp;
+        booted "manually" via a bank of switches that  <br>&nbsp;
+        allows the direct entry of machine code word-by<br>&nbsp;
+        word, executing each instruction as fast as the<br>&nbsp;
+        operator can enter the code. Wow, that's fast! <br>&nbsp;
+		                                               <br>&nbsp;
+		Optional: Example of RS-232 debug ports in     <br>&nbsp;
+		various products leaving <a href=
+		"https://www.youtube.com/watch?time_continue=24&v=h5PRvBpLuJs&feature=emb_logo" 
+		>security vulnerabilities</a>. 
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
@@ -133,7 +197,7 @@ DO {
 		Multithreaded programming (a foundation for    <br>&nbsp;
 		object-oriented programming) you might like to <br>&nbsp;
 		look at Ch 11 in Lee and Seshia.   
-	<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
  5
@@ -150,7 +214,7 @@ DO {
 		>2/19</a>
 		
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-		Topics: Digital-to-analog converson, actuators <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
+		Topics: Digital-to-analog conversion, actuators <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
 		        solenoids, motors                      <br>&nbsp;
 		Scan through Chapters 2 and 3 of <a href=
 		"http://www.analog.com/en/education/education-library/data-conversion-handbook.html"
@@ -241,7 +305,7 @@ DO {
 		second).  Specify how to connect the keypad to <br>&nbsp;
 		specific GPIO pins of the Arduino, how to set  <br>&nbsp;
 		up each GPIO pin, and how to collect the key-  <br>&nbsp;
-		presses in the loop proceedure.  <a href=
+		presses in the loop procedure.  <a href=
 		"https://www.parallax.com/sites/default/files/downloads/27899-4x4-Matrix-Membrane-Keypad-v1.2.pdf"
 		                                >Here</a> is a <br>&nbsp;
 		typical hex keypad</DO>	Turn in your work on  <br>&nbsp;
