--- a/S20/304/304S20DN.HTM
+++ b/S20/304/304S20DN.HTM
@@ -175,7 +175,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/21<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment-->Memory capabilies (stack) needed for interrupts, sources of interrupts<!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Memory capabilities (stack) needed for interrupts, sources of interrupts<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Detail on timer system, advantages of interrupts, OOP, risks of OOP<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color="grey">Test #1</<!--end comment--></td>  
    </TR><!-- Week of 2/24------------------------------------------------------------------ --><TR>
@@ -190,7 +190,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Interrupt density, latency, interrupt intervals<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Int. intervals example; critical regions; task schdlg via-software-hardware<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Meassuring freq. and period, Memory applications and technologies<!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Measuring freq. and period, Memory applications and technologies<!--end comment--></td>  
    </TR><!-- Week of 3/02------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
